<resources>
    <string name="app_name">文档生成器</string>
    <string name="open_folder">打开目录</string>
    <string name="open_mode">模板制作</string>

    <string name="file_item">文件列表</string>
    <string name="file_size">大小</string>
    <string name="file_name">文件名称</string>
    <string name="file_date">日期</string>
    <string name="title_activity_html__show_">Html_Show_Activity</string>

    <string name="text_open">打开</string>
    <string name="text_update">上传</string>
    <string name="text_delete">删除</string>
    <string name="text_entity">更新</string>

    <string name="model_item">模板名称</string>
    <string name="model_list">模板列表</string>


    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>


    <string name="Yinhuan_title">文档名</string>
    <string name="Yinhuan_title_hint">请输入文档名：</string>

    <string name="Yinhuan_XiangMuBu">项目部</string>
    <string name="Yinhuan_XiangMuBu_hint">请输入项目部的名称：</string>


    <string name="Yinhuan_AnYinZiHao">第X号</string>
    <string name="Yinhuan_AnYinZiHao_hint">xxxx号</string>
    <string name="Yinhuan_AnYinZi">安隐字</string>
    <string name="Yinhuan_AnYinZi_hint">字</string>

    <string name="Yinhuan_XIanDingDate">限定时间</string>
    <string name="Yinhuan_QianfaDate">签发时间</string>
    <string name="Yinhuan_ZhenggaiDate">整改时间</string>
    <string name="Yinhuan_FujianDate">复检时间</string>



    <string name="Yinhuan_Add_Item_hint">请输入公司名，不要超过20个字：</string>

    <string name="Yinhuan_Add_Yinhuan_hint">单击添加隐患:</string>
    <string name="Yinhuan_Add_Yinhuan_hint2">请输入隐患:</string>

    <string name="pic_item_tv_camera">拍照</string>
    <string name="pic_item_tv_photo">从手机相册选择</string>


    <string name="creater">生成</string>


</resources>
