<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5.0dp"
    android:layout_marginRight="5.0dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/pic_item_tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/pic_item_tv_camera"
            android:textColor="@color/color4"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color4" />

        <TextView
            android:id="@+id/pic_item_tv_gallery"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="44dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/pic_item_tv_photo"
            android:textColor="@color/color4"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color4" />

        <TextView
            android:id="@+id/pic_item_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/color4"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>