<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView_icon"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@mipmap/word"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:id="@+id/textView_name"
            android:layout_alignTop="@+id/imageView_icon"
            android:layout_toRightOf="@+id/imageView_icon"
            android:layout_toEndOf="@+id/imageView_icon"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignBottom="@+id/imageView_icon"
            android:layout_alignLeft="@+id/textView_name"
            android:layout_alignStart="@+id/textView_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size"
                android:id="@+id/textView_info"
                android:textSize="12sp"/>
            <View  android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_date"
                android:id="@+id/textView_date"
                android:textSize="12sp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageButton_action"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            />

    </RelativeLayout>

    <include layout="@layout/activity_hidden_button"
        />

</LinearLayout>